--- a/Apollo.csproj
+++ b/Apollo.csproj
@@ -31,5 +31,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Fonts\" />
+    <Folder Include="Content\Shaders\" />
   </ItemGroup>
 </Project>
